--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -33,7 +33,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QRadioButton" name="radioButton_2">
+         <widget class="QRadioButton" name="allInfo">
           <property name="enabled">
            <bool>true</bool>
           </property>
@@ -55,7 +55,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QRadioButton" name="radioButton">
+         <widget class="QRadioButton" name="dayInfo">
           <property name="maximumSize">
            <size>
             <width>450</width>
@@ -68,7 +68,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QRadioButton" name="radioButton_3">
+         <widget class="QRadioButton" name="monthInfo">
           <property name="maximumSize">
            <size>
             <width>450</width>
